--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="matSFX - Your Music, Your Way. An open-source, ad-free music streaming platform.">
-    <title>matSFX! - Listen with Joy-</title>
+    <title>matSFX - Listen with Joy-</title>
     <link href="app-images/matsfx_logo.webp" as="image">
     <style>
         :root {
