matSFX-Homepage Redesign
notice: the responsive design is not perfect yet. please report every f*cking responsive error you find

--- a/archive.html
+++ b/archive.html
@@ -14,7 +14,7 @@
         :root {
             --background: #121212;
             --background-secondary: #1e1e1e;
-            --accent: #1db954;
+            --accent: #1361a1;
             --text: #ffffff;
             --border: #424549;
             --shadow: rgba(0, 0, 0, 0.7);
