--- a/learn_more.html
+++ b/learn_more.html
@@ -6,8 +6,8 @@
     <title>matSFX - Learn More About matSFX</title>
     <meta name="description" content="Discover matSFX, an open-source, ad-free music streaming platform focused on community and transparency.">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <link rel="stylesheet" href="css/learn_more.css">
-    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="/css/learn_more.css">
+    <link rel="stylesheet" href="/css/navbar.css">
     <style>
         @font-face {
             font-family: 'inter';
