--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <h1 class="info-text-two">
                 Learn more...
             </h1>
-            <a href="learn_more.html" target="_blank">
+            <a href="learn_more" target="_blank">
                 <img src="images/info_images/learn_more.png" alt="Whats New Image">
             </a>
         </div>
