--- a/archive.html
+++ b/archive.html
@@ -9,6 +9,8 @@
 	<meta property="og:image" content="https://alpha.matsfx.com/app_logos/matsfx_logo.png" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://matsfx.com/" />
+    <link rel="icon" type="image/png" href="/images/matsfx_logo.jpg">
+    <link rel="shortcut icon" type="image/png" href="/images/matsfx_logo.jpg">
     <title>matSFX - Archive</title>
     <style>
         :root {
