--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="/images/matsfx_logo.jpg">
+    <link rel="shortcut icon" type="image/png" href="/images/matsfx_logo.jpg">
 
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/navbar.css">
@@ -106,15 +108,6 @@
             </div>
         </div>
         <div class="community-text">
-            <h1 class="community-text-title">
-                matSFX Trailer 2024
-            </h1>
-            <h2 class="community-text-description">
-                <br>
-                This is the official matSFX Trailer of the <br>
-                year 2024, we Showcase some parts of <br>
-                the matSFX UI and Features.
-            </h2>
             <h1 class="community-love-you">
                 <br> What is the matSFX Community?</h1>
             <h2 class="community-love-you">
@@ -125,6 +118,9 @@
                 You will always be a part of us ❤️
             </h2>
         </div>
+        <a href="forum/" class="community-btn">
+            View Blog
+        </a>
     </div>
 
     <!-- footer - footer-legal, footer-copy-->
