--- a/learn_more.html
+++ b/learn_more.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>matSFX - Learn More About matSFX</title>
     <meta name="description" content="Discover matSFX, an open-source, ad-free music streaming platform focused on community and transparency.">
+    <link rel="icon" type="image/png" href="/images/matsfx_logo.jpg">
+    <link rel="shortcut icon" type="image/png" href="/images/matsfx_logo.jpg">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/learn_more.css">
     <link rel="stylesheet" href="css/navbar.css">
