--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <link rel="icon" type="image/png" href="/images/matsfx_logo.jpg">
     <link rel="shortcut icon" type="image/png" href="/images/matsfx_logo.jpg">
 
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/hero.css">
-    <link rel="stylesheet" href="css/info-section.css">
-    <link rel="stylesheet" href="css/socials.css">
-    <link rel="stylesheet" href="css/community.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/animations.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/hero.css">
+    <link rel="stylesheet" href="/css/info-section.css">
+    <link rel="stylesheet" href="/css/socials.css">
+    <link rel="stylesheet" href="/css/community.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/animations.css">
     
-    <script src="js/video.js"></script>
+    <script src="/js/video.js"></script>
     <title>matSFX - Listen with Joy</title>
 </head>
 <body>
