--- a/learn_more.html
+++ b/learn_more.html
@@ -7,9 +7,9 @@
     <meta name="description" content="Discover matSFX, an open-source, ad-free music streaming platform focused on community and transparency.">
     <link rel="icon" type="image/png" href="/images/matsfx_logo.jpg">
     <link rel="shortcut icon" type="image/png" href="/images/matsfx_logo.jpg">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/learn_more.css">
-    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/learn_more.css">
+    <link rel="stylesheet" href="/css/navbar.css">
 </head>
 <body>
     <div class="navbar">
