--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="icon" type="image/png" href="/images/matsfx_logo.jpg">
     <link rel="shortcut icon" type="image/png" href="/images/matsfx_logo.jpg">
     <link rel="stylesheet" href="css-loader.php?file=index">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="preload" href="css/index.css" as="style">
+    <link rel="preload" href="fonts/inter.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="fonts/draw.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/hero.css">
     <link rel="stylesheet" href="css/info-section.css">
@@ -14,8 +16,6 @@
     <link rel="stylesheet" href="css/community.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/animations.css">
-    
-    <script src="js/video.js"></script>
     <title>matSFX - Listen with Joy</title>
 </head>
 <body>
@@ -135,5 +135,7 @@
             (c)matSFX 2025
         </div>
     </footer>
+
+    <script src="js/video.js"></script>
 </body>
 </html>
