--- a/index.html
+++ b/index.html
@@ -136,6 +136,6 @@
         </div>
     </footer>
 
-    <script src="js/video.js"></script>
+    <script src="js/video.js" defer></script>
 </body>
 </html>
