--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/images/matsfx_logo.jpg">
     <link rel="shortcut icon" type="image/png" href="/images/matsfx_logo.jpg">
-    <link rel="stylesheet" href="css-loader.php?file=index">
-    <link rel="preload" href="css/index.css" as="style">
-    <link rel="preload" href="fonts/inter.ttf" as="font" type="font/ttf" crossorigin>
-    <link rel="preload" href="fonts/draw.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="stylesheet" href="css/index.css" as="style">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/hero.css">
     <link rel="stylesheet" href="css/info-section.css">
