--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <h1 class="info-text-one">
                     What's New?
                 </h1>
-                <a href="https://github.com/matSFX-music/matsfx_main/releases/tag/alpha_0_4_23" target="_blank">
+                <a href="https://github.com/matSFX-music/matsfxapp/releases/tag/latest" target="_blank">
                     <img src="images/info_images/whats_new.png" alt="Whats New Image">
                 </a>
             </div>
@@ -73,7 +73,7 @@
                 <h1 class="info-text-two">
                     Learn more...
                 </h1>
-                <a href="learn_more" target="_blank">
+                <a href="learn_more">
                     <img src="images/info_images/learn_more.png" alt="Whats New Image">
                 </a>
             </div>
