--- a/learn_more.html
+++ b/learn_more.html
@@ -19,7 +19,7 @@
         <div class="nav-links">
             <a href="/">Home</a>
             <a href="https://status.matsfx.com" target="_blank">Status</a>
-            <a href="legal/" target="_blank">Legal</a>
+            <a href="/forum/" target="_blank">Blog</a>
             <div class="nav-button">
                 <a href="https://alpha.matsfx.com" target="_blank">Try Now</a>
             </div>
