--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <a href="https://discord.matsfx.com" class="socials-dicord" target="_blank">
             <img src="images/socials/discord.png" alt="Discord matSFX">
         </a>
-        <a href="https://twitter.com/@matsfxmusic"class="socials-twitter" target="_blank">
+        <a href="https://twitter.com/@matsfxapp"class="socials-twitter" target="_blank">
             <img src="images/socials/twitter.png" alt="Twitter matSFX">
         </a>
         <a href="https://tiktok.matsfx.com" class="socials-tiktok" target="_blank">
