--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
     <!-- footer -->
     <footer class="footer">
         <div class="footer-legal">
-            <a class="footer-terms" href="legal/terms" target="_blank">Terms</a>
-            <a class="footer-privacy" href="legal/privacy" target="_blank">Privacy</a>
-            <a class="footer-license" href="legal/license" target="_blank">License</a>
+            <a class="footer-terms" href="https://legal.matsfx.com/terms-of-service" target="_blank">Terms</a>
+            <a class="footer-privacy" href="https://legal.matsfx.com/privacy-policy" target="_blank">Privacy</a>
+            <a class="footer-license" href="https://legal.matsfx.com/license" target="_blank">License</a>
         </div>
         <div class="footer-copy">
             (c)matSFX 2025
